# traitadapt

./: CMakeLists.txt  README.md
include/: interaction_report.hpp  trait.hpp  trait_carrier.hpp  trait_selector.hpp
src/: interaction_report.cpp  main.cpp  trait_selector.cpp
